package observer;

/**
 * @author ioeah
 * @version 1.0
 * @date 2023/4/6 10:43
 */
public interface Investor {

    void upDate();
}
